tests/positive/basic/term_constants/input.ci
void main() {
    print(toString(KEY_ENTER != KEY_ESC) + "\n");
    print(toString(TERM_COLOR_DEFAULT) + "\n");
    print(toString(TERM_COLOR_WHITE) + "\n");
}
