tests/negative/semantic/wrong_arg_count_epochtosecond/input.ci
void main() {
    print(toString(epochToSecond()) + "\n");
}
